[tool.poetry]
name = "resourcing-approval"
version = "0.1.0"
description = "A web application to aid with resourcing approvals."
authors = ["Live Services <live.services@digital.trade.gov.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
django-environ = "^0.7.0"
whitenoise = "^5.3.0"
waitress = "^2.0.0"
psycopg2 = "^2.9.1"
dj-database-url = "^0.5.0"
celery = "^5.1.2"
redis = "^3.5.3"
django-celery-beat = "^2.2.1"
django-sass-processor = "^1.1"
libsass = "^0.21.0"
django-compressor = "^2.4.1"
notifications-python-client = "^6.3.0"
sentry-sdk = "^1.4.3"
django-staff-sso-client = "^3.1.1"
boto3 = "^1.19.9"
django-storages = "^1.12.3"
django-chunk-upload-handlers = "^0.0.11"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
mypy = "^0.910"
flake8 = "^3.9.2"
pytest = "^6.2.5"
isort = "^5.9.3"
poetry = "^1.1.10"
bpython = "^0.21"
pytest-django = "^4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.2.5"
addopts = "--reuse-db --ds=config.settings.test"

[tool.isort]
profile = "black"
multi_line_output = 3
skip_gitignore = true
line_length = 88
lines_after_imports = 2
